[feature] implement card based ui and correct layout problems

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -1,8 +1,20 @@
+* {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body{
     font-family: Arial, Helvetica,sans-serif;
     padding:0;
     margin:0;
     color: #3a3a3a;
+}
+
+label {
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: 700;
 }
 
 .container{
@@ -65,19 +77,6 @@ header nav{
     float:right;
     margin-top:10px;
 }
-
-
-input[type=text], input[type=password], textarea {
-    width: 100%;
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-bottom: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #c4f7a0;
-    border-radius: 4px 4px 4px 4px;
-  }
   
 input[type=text]:focus, input[type=password]:focus, textarea:focus {
     background-color: #ddd;
@@ -121,10 +120,19 @@ button:hover {
     width: 100%;
 }
 
+.column {
+    min-height: 1px;
+    padding: 15px;
+}
+
 @media only screen and (min-width: 800px) {
 
     .column {
         float: left;
+        position: relative;
+        min-height: 1px;
+        padding-right: 15px;
+        padding-left: 15px;
     }
       
     .left {
@@ -144,8 +152,8 @@ button:hover {
     }
 }
 
-.left-content {
-    padding: 16px;
+.left-content{
+    padding: 15px;
 }
 
 ul.accounts .list-header {
@@ -175,11 +183,13 @@ ul.accounts a, ul.transaction-list a, ul.accounts-list li {
 ul.transaction-list li, ul.accounts-list li {
     
     margin-top: -1px;
-    border-bottom: 1px solid #ddd;
-    padding: 12px;
+    padding: 4px;
     
 }
 
+ul.transaction-list li .card, ul.accounts-list li.card {
+    padding: 8px;
+}
 .tr-type-green {
     color: green;
     font-size: 18pt;
@@ -195,10 +205,6 @@ ul.transaction-list li, ul.accounts-list li {
     border-radius: 100%;
     background: #1faa00;
     overflow: hidden;
-}
-
-#profile {
-    padding: 16px;
 }
 
 #profile h4, .accounts h4, .accounts h3 {
@@ -223,4 +229,111 @@ ul.transaction-list li, ul.accounts-list li {
 
 .btn-action:hover {
     opacity: 1;
+}
+
+/* login */
+
+#welcome {
+    background: #64dd17;
+    display: block;
+    padding: 48px;
+    color: #ffffff;
+    text-align: center;
+}
+
+#welcome h1 {
+    margin: 0;
+    color: #ddd;
+}
+
+.btn-cta {
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 14px 20px;
+    margin: auto;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px 4px 4px 4px;
+}
+
+.btn-cta.get-started {
+    background-color: #ff9e40;
+    color: #ddd;
+}
+
+.btn-cta.signin {
+    background-color: #4CAF50;
+    color: #fff;
+    
+}
+
+.btn-cta:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+div.card {
+    width: 100%;
+    box-shadow: 0 .2px 4px 0 #ddd, 0 .6px .20px 0 #ddd;
+    border-radius: 4px 4px 4px 4px;
+}
+
+.card .content {
+    padding: 15px;
+}
+
+.card img {
+    padding: 4px;
+    margin: 16px;
+}
+
+.card #account-info {
+    padding: 16px;
+}
+  
+
+div.card-header {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    font-size: 40px;
+}
+
+div.card-container {
+    padding: 10px;
+}
+
+.form .field {
+    margin-bottom: 15px;
+}
+
+.form .element, 
+input[type=text], 
+input[type=password], 
+textarea {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    border: none;
+    background: #c4f7a0;
+    border-radius: 4px;
+}
+
+
+
+.search {
+    margin: 12px 0px;
+}
+
+.transaction-list .card {
+    background-color: #fff;
+    transition: background-color ease-in-out .80s;
+}
+.transaction-list .card:hover,
+.accounts-list .card:hover {
+    background-color: #c4f7a0;
+    cursor: pointer;
 }
